Fix body scroll and text vertical align middle on safari

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -70,9 +70,6 @@ select option {
 		padding: 0 13px;
 		line-height: 33px;
 	}
-	@include breakpoint(mobile) {
-		// padding: 0 5px;
-	}
 }
 .input {
 	height: 35px;
